[java] Support YT_BASE_LAYER
No description

---

* Changelog entry
Type: feature
Component: java-sdk

Pull Request resolved: https://github.com/ytsaurus/ytsaurus/pull/887

Co-authored-by: tinarsky <tinarsky@ytsaurus.tech>
commit_hash:fc365ccf8c2be5a301d62d4a252339b8df7af8fb